; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecx_meth.c_pkey_ecd_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecx_meth.c_pkey_ecd_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EC_F_PKEY_ECD_CTRL = common dso_local global i32 0, align 4
@EC_R_INVALID_DIGEST_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i8*)* @pkey_ecd_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pkey_ecd_ctrl(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %25 [
    i32 128, label %11
    i32 129, label %24
  ]

11:                                               ; preds = %4
  %12 = load i8*, i8** %9, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %19, label %14

14:                                               ; preds = %11
  %15 = load i8*, i8** %9, align 8
  %16 = bitcast i8* %15 to i32*
  %17 = call i32* (...) @EVP_md_null()
  %18 = icmp eq i32* %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %14, %11
  store i32 1, i32* %5, align 4
  br label %26

20:                                               ; preds = %14
  %21 = load i32, i32* @EC_F_PKEY_ECD_CTRL, align 4
  %22 = load i32, i32* @EC_R_INVALID_DIGEST_TYPE, align 4
  %23 = call i32 @ECerr(i32 %21, i32 %22)
  store i32 0, i32* %5, align 4
  br label %26

24:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %26

25:                                               ; preds = %4
  store i32 -2, i32* %5, align 4
  br label %26

26:                                               ; preds = %25, %24, %20, %19
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32* @EVP_md_null(...) #1

declare dso_local i32 @ECerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
